crates/cargo-anvil/tests/snapshots/toml_adoption__adopts_a_hand_written_table.snap
---
source: crates/cargo-anvil/tests/toml_adoption.rs
expression: "report(before, &tmp, \"deny.toml\", &outcome)"
---
--- deny.toml, as the user wrote it ---
# We accept this one until upstream ships a fix.
[advisories]
ignore = ["RUSTSEC-9999-0001"]

--- decisions ---
anvil-deny-advisories: Write
anvil-deny-bans: Write
anvil-deny-licenses: Write
anvil-deny-sources: Write

--- refusals ---
(none)

--- deny.toml, as anvil left it ---
# We accept this one until upstream ships a fix.

# >>> anvil-managed: anvil-deny-advisories
[advisories]
yanked = "deny"
# Scope of unmaintained-crate checks: "all" surfaces transitive
# dependencies too; tighten to "workspace" if the noise is high.
unmaintained = "all"
# <<< anvil-managed: anvil-deny-advisories
ignore = ["RUSTSEC-9999-0001"]

# >>> anvil-managed: anvil-deny-licenses
[licenses]
allow = [
    "MIT",
    "Apache-2.0",
    "Apache-2.0 WITH LLVM-exception",
    "BSD-2-Clause",
    "BSD-3-Clause",
    "ISC",
    "MPL-2.0",
    "Unicode-DFS-2016",
    "Unicode-3.0",
    "Zlib",
]
confidence-threshold = 0.93
# <<< anvil-managed: anvil-deny-licenses

# >>> anvil-managed: anvil-deny-bans
[bans]
multiple-versions = "warn"
wildcards = "deny"
allow-wildcard-paths = true
# <<< anvil-managed: anvil-deny-bans

# >>> anvil-managed: anvil-deny-sources
[sources]
unknown-registry = "deny"
unknown-git = "deny"
# <<< anvil-managed: anvil-deny-sources
