crates/cargo-anvil/tests/snapshots/toml_adoption__keeps_an_unmanaged_dotted_lint.snap
---
source: crates/cargo-anvil/tests/toml_adoption.rs
expression: "report(before, &tmp, \"Cargo.toml\", &outcome)"
---
--- Cargo.toml, as the user wrote it ---
[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.lints]
# House rule, not in anvil's catalog.
rust.a_custom_lint = "warn"
rust.unsafe_op_in_unsafe_fn = "warn"

[profile.release]
lto = "thin"
incremental = false

--- decisions ---
anvil-workspace-clippy-lints: Write
anvil-workspace-rust-lints: Write
anvil-workspace-rustdoc-lints: Write

--- refusals ---
(none)

--- Cargo.toml, as anvil left it ---
[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.lints]

# >>> anvil-managed: anvil-workspace-rust-lints
[workspace.lints.rust]
# Rust compiler lint policy. Repository-specific Rust lints can follow this
# region as bare keys in the same table.
ambiguous_negative_literals = "warn"
missing_debug_implementations = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
trivial_numeric_casts = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"
# `unexpected_cfgs` is on-by-default at warn since Rust 1.80; combined
# with the catalog's `-D warnings` cloud-workflow policy, any custom cfg name
# becomes a hard build failure. Pre-declare the cfgs that
# `cargo llvm-cov` sets so the recommended coverage-exclusion pattern
# `#[cfg_attr(coverage_nightly, coverage(off))]` works out of the box.
# Adopters who need additional cfg names take ownership of this one
# assignment (edit the check-cfg array); anvil's drift detector will
# emit a `.anvil-proposed` sibling on future catalog bumps so the
# customization is preserved.
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(coverage,coverage_nightly)',
    'cfg(loom)',
    'cfg(miri_race_coverage)',
    'cfg(miri_strict_provenance)',
    'cfg(miri_tree_borrows)',
] }
# <<< anvil-managed: anvil-workspace-rust-lints
# House rule, not in anvil's catalog.
a_custom_lint = "warn"

# >>> anvil-managed: anvil-workspace-rustdoc-lints
[workspace.lints.rustdoc]
# Rustdoc lint policy. Repository-specific rustdoc lints can follow this
# region as bare keys in the same table.
broken_intra_doc_links = "warn"
missing_crate_level_docs = "warn"
unescaped_backticks = "warn"
# <<< anvil-managed: anvil-workspace-rustdoc-lints

# >>> anvil-managed: anvil-workspace-clippy-lints
[workspace.lints.clippy]
# Clippy category gates use priority -1 so per-lint allows can override them.
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
# Two-repo consensus (oxidizer + oxidizer-github). Restriction-group
# lints that catch real code-smell cases. Adding a workspace-wide lint
# means adopters can only opt out per-crate or by taking ownership of
# this region; only enable when the consensus is strong enough to
# justify that cost.
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
as_pointer_underscore = "warn"
assertions_on_result_states = "warn"
clone_on_ref_ptr = "warn"
deref_by_slicing = "warn"
disallowed_script_idents = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
fn_to_numeric_cast_any = "warn"
if_then_some_else_none = "warn"
map_err_ignore = "warn"
multiple_unsafe_ops_per_block = "warn"
redundant_type_annotations = "warn"
renamed_function_params = "warn"
semicolon_outside_block = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unneeded_field_pattern = "warn"
unused_result_ok = "warn"
unwrap_used = "warn"
# Literal braces are valid data in templates and structured-logging messages.
literal_string_with_formatting_args = "allow"
missing_const_for_fn = "allow"
multiple_crate_versions = "allow"
option_if_let_else = "allow"
redundant_pub_crate = "allow"
should_panic_without_expect = "allow"
significant_drop_tightening = "allow"
# Blocked by Clippy bug: https://github.com/rust-lang/rust-clippy/issues/15036
wildcard_imports = "allow"
# <<< anvil-managed: anvil-workspace-clippy-lints

[profile.release]
lto = "thin"
incremental = false
