crates/cargo-anvil/tests/snapshots/toml_adoption__preserves_hunspell_extras_in_their_table.snap
---
source: crates/cargo-anvil/tests/toml_adoption.rs
assertion_line: 191
expression: "report(before, &tmp, \"spellcheck.toml\", &outcome)"
---
--- spellcheck.toml, as the user wrote it ---
[Hunspell]
transform_regex = ["^[0-9]+$"]

--- decisions ---
anvil-spellcheck-hunspell: Write
anvil-spellcheck-quirks: Write
anvil-spellcheck-root: Write

--- refusals ---
(none)

--- spellcheck.toml, as anvil left it ---
# >>> anvil-managed: anvil-spellcheck-root
# Check spelling in code comments marked as dev/developer comments
# (e.g., `// TODO:`, `// FIXME:`). Set to false to skip them.
dev_comments = false

# Whether to skip spell checking README files. Set to false to include
# README files in spell checking.
skip_readme = false
# <<< anvil-managed: anvil-spellcheck-root

# >>> anvil-managed: anvil-spellcheck-hunspell
[Hunspell]
# Language dictionary. "en_US" uses the built-in English (US) dictionary.
lang = "en_US"

# Directories searched for `extra_dictionaries` paths. The default
# repo-root entry lets adopters keep their custom dictionary next to
# the .spelling source.
search_dirs = ["."]

# Additional dictionary files loaded after the language dictionary.
# Format: first line is the word count, remaining lines are sorted
# words (one per line). `target/spelling.dic` is generated by the
# `anvil-spellcheck` recipe from the repo's `.spelling` file.
extra_dictionaries = ["target/spelling.dic"]

# Don't consult OS-provided dictionaries. Keeps results consistent
# across Linux/macOS/Windows runners.
skip_os_lookups = true

# Use cargo-spellcheck's built-in language dictionaries (independent of
# system hunspell installation). Required for the cross-platform
# reproducibility guarantee above.
use_builtin = true

# Token-boundary characters. Override the upstream default to add
# typographic punctuation we use in prose (em-dash, en-dash, arrows,
# minus sign). Without these, cargo-spellcheck 0.15.7 tokenises text
# like `runtime — it` as three tokens including the em-dash itself,
# then fails its dictionary lookup and flags the em-dash as a
# "possible spelling mistake". Upstream default keeps figure-dash
# (U+2012) and the ASCII hyphen but omits the rest; this list is a
# superset, so the only behavioural change is that the added chars
# now act as token boundaries.
#
# Encoded as \uXXXX escapes for grep-ability and to keep the file
# 7-bit ASCII:
#   ASCII punctuation (default): ",;:.!?#(){}[]|/_-
#   Dashes & minus  : \u2012 figure-dash       (default)
#                     \u2013 en-dash           (added)
#                     \u2014 em-dash           (added)
#                     \u2015 horizontal-bar    (added)
#                     \u2212 minus-sign        (added)
#   Arrows          : \u2190 leftwards-arrow   (added)
#                     \u2192 rightwards-arrow  (added)
#   ASCII punctuation (default): ' ` & @
#   Misc (default)              : \u00A7 section, \u00B6 pilcrow, \u2026 ellipsis
tokenization_splitchars = "\",;:.!?#(){}[]|/_-\u2012\u2013\u2014\u2015\u2190\u2192\u2212'`&@\u00A7\u00B6\u2026"
# <<< anvil-managed: anvil-spellcheck-hunspell
transform_regex = ["^[0-9]+$"]

# >>> anvil-managed: anvil-spellcheck-quirks
[Hunspell.quirks]
# Treat CamelCase identifiers as concatenations of dictionary words
# (e.g., `TcpStream` = `Tcp` + `Stream`). Lowers false-positive rate
# substantially on Rust codebases.
allow_concatenation = true
# <<< anvil-managed: anvil-spellcheck-quirks
