crates/cargo-anvil/tests/snapshots/toml_adoption__refuses_residue_that_cannot_stay_in_its_table.snap
---
source: crates/cargo-anvil/tests/toml_adoption.rs
expression: "report(before, &tmp, \"spellcheck.toml\", &outcome)"
---
--- spellcheck.toml, as the user wrote it ---
[Hunspell]
transform_regex = ["^[0-9]+$"]

--- decisions ---
anvil-spellcheck: LeaveAlone

--- refusals ---
Refused to manage spellcheck.toml [anvil-spellcheck]: spellcheck.toml declares settings in `[Hunspell]` that the managed region 'anvil-spellcheck' does not, and the region's body ends in `[Hunspell.quirks]`, so re-emitting them after the region would make them settings of `[Hunspell.quirks]` instead. Remove them from `[Hunspell]` and re-run. This region was left unchanged; other regions in the same file and other artifacts may still be updated. Reconcile the hand-written table with the managed one before retrying.

--- spellcheck.toml, as anvil left it ---
[Hunspell]
transform_regex = ["^[0-9]+$"]
